# masters-thesis

./: Dockerfile  README.md  ffi_wasmer.patch  ffi_wasmtime.patch
experiments/: .gitignore
experiments/memory_test/allocation_test/: library.jsonnet  test_jsonnet.jsonnet
experiments/memory_test/valgrind_test/: .gitignore  CMakeLists.txt  main.c
experiments/speed_tests/execution_tests/: file_function.jsonnet  notebook.ipynb  strace_results.txt
experiments/speed_tests/import_tests/: file.jsonnet  generate_libs_c.sh  generate_libs_rust.sh  generate_table.ipynb  template.jsonnet  test.sh  test_2.sh
experiments/speed_tests/serialisation_tests/: .gitignore  file.jsonnet  generate_graph.ipynb  generate_libs_rust.sh  generate_str_libs_rust.sh  template.jsonnet  template_str.jsonnet  test_str.sh
experiments/speed_tests/sha_tests/: generate_graphs.ipynb  sha.jsonnet  sha_ffi.jsonnet  test_ffi.sh  test_ffi_2.sh  test_jsonnet.sh  test_rust.sh  test_rust_2.sh
experiments/speed_tests/sha_tests/benchmark_ffi/: Cargo.toml
experiments/speed_tests/sha_tests/benchmark_ffi/src/: lib.rs
experiments/speed_tests/sha_tests/benchmark_rust/: Cargo.toml
experiments/speed_tests/sha_tests/benchmark_rust/src/: main.rs
experiments/wasmer_wasmtime_tests/: generate_graph.ipynb  test.sh  test_ffi.jsonnet  test_ffi_c.jsonnet
